# NovelBuddy

./: .env.example  .gitignore  README.md  pyproject.toml  start-novelbuddy.ps1  stop-novelbuddy.ps1  停止.bat  启动.bat
novelbuddy/: ai_tells.py  cli.py  entities.py  entity_enums.py  style_reference.py  vector_search.py  web.py
tests/: test_ai_tells_and_pressure.py  test_entity_enums.py  test_post_generation_pipeline.py  test_rewrite_prompt.py  test_style_reference.py
